--- a/public/styles/button.css
+++ b/public/styles/button.css
@@ -39,9 +39,9 @@ button {
 .ghost-btn {
     background-color: transparent;
     color: rgb(113, 113, 113);
-    padding: 8px 16px;
     font-weight: bold;
     border-radius: 50px;
+    font-size: 3rem;
 }
 
 .disabled-btn {
