--- a/public/styles/globals.css
+++ b/public/styles/globals.css
@@ -30,10 +30,17 @@ header {
 main {
     flex: 1;
     display: flex;
+    flex-direction: column;
     gap: 2rem;
 }
 
-main > section {
+.sub-main {
+    flex: 1;
+    display: flex;
+    gap: 2rem;
+}
+
+.timer-section-content {
     width: 33.33%;
     border: 1px solid #e0e0e0;
     padding: 2rem;
